[gd_scene load_steps=14 format=2]

[ext_resource path="res://combat/CombatScreen.gd" type="Script" id=1]
[ext_resource path="res://combat/Enemies.tscn" type="PackedScene" id=2]
[ext_resource path="res://combat/ShieldContainer.gd" type="Script" id=3]
[ext_resource path="res://combat/AllyPortraits.tscn" type="PackedScene" id=4]
[ext_resource path="res://art_exports/ui_battle/ui_battle_header.png" type="Texture" id=5]
[ext_resource path="res://combat/MinigameContainer.gd" type="Script" id=6]
[ext_resource path="res://font/NOTOSANS-CONDENSEDMEDIUM.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://img/combat/combat-mockup.png" type="Texture" id=8]
[ext_resource path="res://art_exports/ui_battle/ui_action_vignette.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite

func _ready():
	CombatMgr.connect(\"show_battle_header\", self, \"on_show_battle_header\")
	CombatMgr.connect(\"hide_battle_header\", self, \"on_hide_battle_header\")

func on_show_battle_header(new_text):
	$BattleText.text = new_text
	$AnimationPlayer.play(\"slide_in\")

func on_hide_battle_header():
	#$BattleText.text = \"\"
	$AnimationPlayer.play_backwards(\"slide_in\")
"

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -364, 87 ), Vector2( 364, 87 ) ]
}

[node name="CombatScreen" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 540.0 ],
"_edit_vertical_guides_": [ 2240.0 ]
}

[node name="Enemies" parent="." instance=ExtResource( 2 )]

[node name="combat-mockup" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )
centered = false

[node name="ActionVignette" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 593, 0 )
texture = ExtResource( 9 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActionVignette"]
anims/fade_in = SubResource( 1 )

[node name="AllyPortraits" parent="." instance=ExtResource( 4 )]

[node name="ShieldContainer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="BulletContainer" type="Node2D" parent="."]

[node name="BattleHeader" type="Sprite" parent="."]
position = Vector2( -364, 87 )
texture = ExtResource( 5 )
script = SubResource( 2 )

[node name="Label" type="Label" parent="BattleHeader"]
margin_left = -329.0
margin_top = -67.0
margin_right = -168.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 3 )
text = "Action Phase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleText" type="Label" parent="BattleHeader"]
margin_left = -351.0
margin_top = -26.0
margin_right = 325.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "Grias is attacking!"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BattleHeader"]
anims/slide_in = SubResource( 4 )

[node name="MinigameContainer" type="CenterContainer" parent="."]
margin_left = 1920.0
margin_right = 2560.0
margin_bottom = 1080.0
rect_min_size = Vector2( 640, 1080 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinigameCenter" type="Position2D" parent="MinigameContainer"]
position = Vector2( 320, 540 )

[connection signal="player_move_selected" from="." to="." method="_on_CombatScreen_player_move_selected"]
[connection signal="start_combat" from="." to="." method="_on_CombatScreen_start_combat"]
[connection signal="single_enemy_target_complete" from="Enemies" to="." method="_on_Enemies_single_enemy_target_complete"]
[connection signal="target_cancelled" from="Enemies" to="." method="_on_Enemies_target_cancelled"]
